unit and integration test; transaction implementation
