# docs/swagger.json
@@ -110,6 +110,11 @@
         },
         "/info": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Fetches user information based on the userID from the context",
                 "consumes": [
                     "application/json"
@@ -145,6 +150,11 @@
         },
         "/merch": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Fetches all merch items from the database and returns a list of merch",
                 "consumes": [
                     "application/json"
@@ -175,8 +185,13 @@
                 }
             }
         },
-        "/merch/buy/:item": {
+        "/merch/buy/{item}": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Allows a user to purchase a merchandise item by specifying the item ID in the URL",
                 "consumes": [
                     "application/json"
@@ -227,6 +242,11 @@
         },
         "/send-coin": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Allows a user to send coins to another user by specifying the receiver ID and the amount",
                 "consumes": [
                     "application/json"
@@ -517,7 +537,7 @@
         }
     },
     "securityDefinitions": {
-        "JWT": {
+        "BearerAuth": {
             "description": "JWT token",
             "type": "apiKey",
             "name": "Authorization",
